--- a/docs/colab_notebooks/5-generating-images.ipynb
+++ b/docs/colab_notebooks/5-generating-images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ee289e6",
+   "id": "fb577af2",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Generating Images\n",
@@ -15,14 +15,14 @@
     "- 📝 **Jinja2 prompts**: Drive diversity by referencing other columns in your prompt template\n",
     "- 💾 **Preview vs create**: Preview stores base64 in the dataframe; create saves images to disk and stores paths\n",
     "\n",
-    "Data Designer supports both **diffusion** (e.g. DALL·E, Stable Diffusion, Imagen) and **autoregressive** (e.g. Gemini image, GPT image) models; the API is chosen automatically from the model name.\n",
+    "Data Designer supports both **diffusion** (e.g. DALL·E, Stable Diffusion, Imagen) and **autoregressive** (e.g. Gemini image, GPT image) models.\n",
     "\n",
     "If this is your first time using Data Designer, we recommend starting with the [first notebook](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/1-the-basics/) in this tutorial series.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86f748c1",
+   "id": "6d0c0049",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c610ee22",
+   "id": "47e777d7",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818ca495",
+   "id": "0889f8b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f165bb15",
+   "id": "58dda77c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5decfc83",
+   "id": "9ee635ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929f35d6",
+   "id": "32f2a62b",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c8b7d7",
+   "id": "8f2fe56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed7b0b6",
+   "id": "a526f294",
    "metadata": {},
    "source": [
     "### 🎛️ Define an image-generation model\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b1ca66",
+   "id": "95eb6aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498cfecf",
+   "id": "0665df24",
    "metadata": {},
    "source": [
     "### 🏗️ Build the config: samplers + image column\n",
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74fc7ab",
+   "id": "98a5381c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c592c820",
+   "id": "75dc9209",
    "metadata": {},
    "source": [
     "### 🔁 Preview: images as base64\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eee17bb1",
+   "id": "b70e22f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd320cc",
+   "id": "e0fdc58d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb5e188",
+   "id": "dbb3c655",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b83328",
+   "id": "cd9dd316",
    "metadata": {},
    "source": [
     "### 🆙 Create: images saved to disk\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f9cc41",
+   "id": "0074f4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4453e5",
+   "id": "6bbe1861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198301ab",
+   "id": "43d567dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bdcef2b",
+   "id": "d0eb52cb",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
