image-to-image tutorial

--- a/docs/colab_notebooks/5-generating-images.ipynb
+++ b/docs/colab_notebooks/5-generating-images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb577af2",
+   "id": "03c4dcde",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Generating Images\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d0c0049",
+   "id": "4c87bc8f",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e777d7",
+   "id": "e36ad3a6",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0889f8b0",
+   "id": "a96a5056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58dda77c",
+   "id": "7b0dd67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee635ed",
+   "id": "611b8e3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f2a62b",
+   "id": "68604cc1",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f2fe56e",
+   "id": "cf826b56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a526f294",
+   "id": "19c44404",
    "metadata": {},
    "source": [
     "### 🎛️ Define an image-generation model\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95eb6aa3",
+   "id": "5a3177b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0665df24",
+   "id": "8c3b2830",
    "metadata": {},
    "source": [
     "### 🏗️ Build the config: samplers + image column\n",
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a5381c",
+   "id": "dbcbe101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75dc9209",
+   "id": "31c88669",
    "metadata": {},
    "source": [
     "### 🔁 Preview: images as base64\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70e22f6",
+   "id": "e1c9cdba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fdc58d",
+   "id": "a268f456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb3c655",
+   "id": "41542106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9dd316",
+   "id": "a96def17",
    "metadata": {},
    "source": [
     "### 🆙 Create: images saved to disk\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0074f4c3",
+   "id": "d3667abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbe1861",
+   "id": "614ced29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,23 +397,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d567dd",
+   "id": "8fe38ca1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display all image from the created dataset. Paths are relative to the artifact output directory.\n",
+    "# Display all images from the created dataset. Paths are relative to the artifact output directory.\n",
     "for index, row in dataset.iterrows():\n",
     "    path_or_list = row.get(\"generated_image\")\n",
     "    if path_or_list is not None:\n",
-    "        for path in path_or_list:\n",
-    "            base = results.artifact_storage.base_dataset_path\n",
-    "            full_path = base / path\n",
-    "            display(IPImage(data=full_path))"
+    "        paths = path_or_list if not isinstance(path_or_list, str) else [path_or_list]\n",
+    "        for path in paths:\n",
+    "            full_path = results.artifact_storage.base_dataset_path / path\n",
+    "            display(IPImage(filename=str(full_path)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0eb52cb",
+   "id": "c483fd33",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
@@ -421,7 +421,8 @@
     "- [The basics](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/1-the-basics/): samplers and LLM text columns\n",
     "- [Structured outputs and Jinja](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/2-structured-outputs-and-jinja-expressions/)\n",
     "- [Seeding with a dataset](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/3-seeding-with-a-dataset/)\n",
-    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n"
+    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n",
+    "- [Image-to-image editing](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/6-editing-images-with-image-context/): edit existing images with seed datasets\n"
    ]
   }
  ],
