feat: add image generation support with multi-modal context (#317)

--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2a3e544",
+   "id": "25501772",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57c4f0a",
+   "id": "67ffc49e",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7da8723",
+   "id": "54a42504",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a12556",
+   "id": "05b45354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fcdfde5",
+   "id": "039360fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5899e85c",
+   "id": "028d5e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c093c90",
+   "id": "15a1df61",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2066fe",
+   "id": "a87b6ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e81142",
+   "id": "b9166cfd",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "880012ea",
+   "id": "4961d3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b77a92c",
+   "id": "b1d8588a",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ab6628",
+   "id": "cf42a4dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26fb0a63",
+   "id": "8d6b26aa",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84908e88",
+   "id": "fc90401d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1947e70a",
+   "id": "6f5ee960",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be2fbad1",
+   "id": "e9db2ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcce5dc",
+   "id": "00efc894",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82dc02f8",
+   "id": "3e3d824e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2d1583",
+   "id": "27785af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62a9173b",
+   "id": "430998d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5263e705",
+   "id": "dda6458b",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5295320f",
+   "id": "f45bc088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ecc195f",
+   "id": "1e913fd8",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3865fb59",
+   "id": "30b8b7f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7acf2b0",
+   "id": "b7ff96d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a6e999",
+   "id": "dbfef8a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,14 +427,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4503b1cf",
+   "id": "5db3f38d",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
     "\n",
     "Check out the following notebook to learn more about:\n",
     "\n",
-    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n"
+    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n",
+    "\n",
+    "- [Generating images](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/5-generating-images/)\n"
    ]
   }
  ],
