--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90dda708",
+   "id": "19e57933",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ccb1e5",
+   "id": "25e3cc64",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9627c4eb",
+   "id": "4aae5c82",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1817171a",
+   "id": "24dfae6c",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f15a669",
+   "id": "619b1aae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1201c93b",
+   "id": "0d49a542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f814b76c",
+   "id": "1b28f160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac423d57",
+   "id": "63dc34de",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c655c2d",
+   "id": "672155c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d41e922",
+   "id": "4b32c25e",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b5f4bf",
+   "id": "72971915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6455fc58",
+   "id": "115ad20f",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462c2e01",
+   "id": "11e844d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31369d10",
+   "id": "77862fce",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d9432a",
+   "id": "e415a502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8614c4e9",
+   "id": "335f2611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80550e46",
+   "id": "f055e88d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ced9bb",
+   "id": "47a1c586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b210e8",
+   "id": "3a77fc52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d506903d",
+   "id": "c0941cc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b91032a2",
+   "id": "578e77dc",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd947de",
+   "id": "9f0c11ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ff4c07",
+   "id": "b10412c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97e4dfe",
+   "id": "766ee2d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a284c12",
+   "id": "6370bfa5",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2570e7fd",
+   "id": "d57ded0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b8eb5a",
+   "id": "5afd8e8c",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0d9336",
+   "id": "aa4bfcc3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c257a81",
+   "id": "4eeaada6",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d840e9",
+   "id": "0ee5b1b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "909e6f3f",
+   "id": "e5e8b241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbb4cae",
+   "id": "23ebb3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d085584c",
+   "id": "14a78533",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
@@ -499,7 +499,9 @@
     "- Experiment with different vision models for specific document types\n",
     "- Try different prompt variations to generate specialized descriptions (e.g., technical details, key findings)\n",
     "- Combine vision-based summaries with other column types for multi-modal workflows\n",
-    "- Apply this pattern to other vision tasks like image captioning, OCR validation, or visual question answering\n"
+    "- Apply this pattern to other vision tasks like image captioning, OCR validation, or visual question answering\n",
+    "\n",
+    "- [Generating images](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/5-generating-images/) with Data Designer\n"
    ]
   }
  ],
