docs: add image generation documentation and image-to-image editing tutorial (#319)

--- a/docs/colab_notebooks/5-generating-images.ipynb
+++ b/docs/colab_notebooks/5-generating-images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "735e6197",
+   "id": "3b8abde3",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Generating Images\n",
@@ -15,14 +15,16 @@
     "- 📝 **Jinja2 prompts**: Drive diversity by referencing other columns in your prompt template\n",
     "- 💾 **Preview vs create**: Preview stores base64 in the dataframe; create saves images to disk and stores paths\n",
     "\n",
-    "Data Designer supports both **diffusion** (e.g. DALL·E, Stable Diffusion, Imagen) and **autoregressive** (e.g. Gemini image, GPT image) models; the API is chosen automatically from the model name.\n",
+    "Data Designer supports both **diffusion** (e.g. DALL·E, Stable Diffusion, Imagen) and **autoregressive** (e.g. Gemini image, GPT image) models.\n",
+    "\n",
+    "> **Prerequisites**: This tutorial uses [OpenRouter](https://openrouter.ai) with the Flux 2 Pro image model. Set `OPENROUTER_API_KEY` in your environment before running.\n",
     "\n",
     "If this is your first time using Data Designer, we recommend starting with the [first notebook](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/1-the-basics/) in this tutorial series.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "92ae4afe",
+   "id": "1da8d75f",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc77347",
+   "id": "cc461005",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -44,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23627c23",
+   "id": "206037bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf958dc6",
+   "id": "db5a4929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0cfff8",
+   "id": "b3cba8b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,18 +88,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a18ef5ce",
+   "id": "444aa9dc",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
     "\n",
-    "When initialized without arguments, [default model providers](https://nvidia-nemo.github.io/DataDesigner/latest/concepts/models/default-model-settings/) are used. This tutorial uses [OpenRouter](https://openrouter.ai) with the Flux 2 Pro image model; set `OPENROUTER_API_KEY` in your environment.\n"
+    "We initialize Data Designer without arguments here—the image model is configured explicitly in the next cell. No default text model is needed for this tutorial.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe11301",
+   "id": "1932342c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b913d454",
+   "id": "aa7b90c5",
    "metadata": {},
    "source": [
     "### 🎛️ Define an image-generation model\n",
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50d26ee",
+   "id": "df7e4385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122374d9",
+   "id": "a1325e38",
    "metadata": {},
    "source": [
     "### 🏗️ Build the config: samplers + image column\n",
@@ -151,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940f2b70",
+   "id": "95064ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13e0bb4",
+   "id": "c6fe0620",
    "metadata": {},
    "source": [
     "### 🔁 Preview: images as base64\n",
@@ -335,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a60a76f",
+   "id": "7323dce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c831ee8",
+   "id": "510b933c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143e762f",
+   "id": "0c8c197f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84606b4",
+   "id": "4cffd205",
    "metadata": {},
    "source": [
     "### 🆙 Create: images saved to disk\n",
@@ -376,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89147954",
+   "id": "308bf2b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c96063",
+   "id": "02610965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,23 +399,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb794bb",
+   "id": "189af389",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display all image from the created dataset. Paths are relative to the artifact output directory.\n",
+    "# Display all images from the created dataset. Paths are relative to the artifact output directory.\n",
     "for index, row in dataset.iterrows():\n",
     "    path_or_list = row.get(\"generated_image\")\n",
     "    if path_or_list is not None:\n",
-    "        for path in path_or_list:\n",
-    "            base = results.artifact_storage.base_dataset_path\n",
-    "            full_path = base / path\n",
-    "            display(IPImage(data=full_path))"
+    "        paths = path_or_list if not isinstance(path_or_list, str) else [path_or_list]\n",
+    "        for path in paths:\n",
+    "            full_path = results.artifact_storage.base_dataset_path / path\n",
+    "            display(IPImage(filename=str(full_path)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0a72bf6",
+   "id": "51558182",
    "metadata": {},
    "source": [
     "## ⏭️ Next steps\n",
@@ -421,7 +423,8 @@
     "- [The basics](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/1-the-basics/): samplers and LLM text columns\n",
     "- [Structured outputs and Jinja](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/2-structured-outputs-and-jinja-expressions/)\n",
     "- [Seeding with a dataset](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/3-seeding-with-a-dataset/)\n",
-    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n"
+    "- [Providing images as context](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/4-providing-images-as-context/)\n",
+    "- [Image-to-image editing](https://nvidia-nemo.github.io/DataDesigner/latest/notebooks/6-editing-images-with-image-context/): edit existing images with seed datasets\n"
    ]
   }
  ],
