--- a/fern/v0.5.0/pages/devnotes/design-principles.mdx
+++ b/fern/v0.5.0/pages/devnotes/design-principles.mdx
@@ -3,6 +3,9 @@ title: "Designing Data Designer: Why SDG Is a Systems Problem"
 description: The design principles behind NeMo Data Designer and why we built it as a composable orchestration framework.
 ---
 
+import { PipelineDiagram } from "@/components/PipelineDiagram";
+import { sdgPipelineDiagram } from "@/components/diagrams/sdg-pipeline";
+
 Synthetic data generation is more than a single prompt to a large language model. In this post, we walk through the design principles behind NeMo Data Designer and explain why we built it as a composable orchestration framework - treating SDG as a system of specialized stages rather than a monolithic generation task.
 
 ![Designing Data Designer: from monolithic prompts to composable pipelines](/assets/images/design-principles-hero.png)
@@ -99,30 +102,7 @@ In a single-prompt approach, you'd try to pack all of this into one call: "Given
 
 With Data Designer, the same task decomposes into a pipeline of focused stages:
 
-```
-      Seed Documents         Seed dataset column ingests documents
-            │                 from local files or HuggingFace
-            ▼
-┌─────────────────────────┐
-│  Artifact Extraction    │  LLM extracts key concepts, entities,
-│                         │  relationships from each document
-└───────────┬─────────────┘
-            │
-            ▼
-┌─────────────────────────┐
-│  QA Generation          │  LLM generates questions & answers grounded
-│                         │  in the extracted artifacts
-└───────────┬─────────────┘
-            │
-            ▼
-┌─────────────────────────┐
-│  Quality Evaluation     │  LLM judge scores each QA pair
-│                         │  on relevance, accuracy, clarity
-└───────────┬─────────────┘
-            │
-            ▼
-      Final Dataset
-```
+<PipelineDiagram diagram={sdgPipelineDiagram} />
 
 Each box is a column. Each one can use a different model. Each one has a focused prompt or algorithm. And because they're declared as columns with explicit dependencies, the framework handles the execution order, the batching, and the parallelism.
 
