--- a/fern/v0.5.0/pages/devnotes/rqa.mdx
+++ b/fern/v0.5.0/pages/devnotes/rqa.mdx
@@ -3,7 +3,10 @@ title: "Graduate-Level Science Reasoning Data with NeMo Data Designer"
 description: How we created the RQA dataset using Data Designer to push the boundaries of model performance.
 ---
 
+import { Authors } from "@/components/Authors";
 import { MetricsTable } from "@/components/MetricsTable";
+
+<Authors ids={["dcorneil", "etramel"]} />
 
 Using NeMo Data Designer, we created the RQA (Reasoning Question-Answer) dataset: a massive collection of graduate-level, reasoning-heavy science samples designed to push the boundaries of model performance.
 
